--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,112 @@
-absl-py==0.10.0
-astunparse==1.6.3
-cachetools==4.1.1
-certifi==2020.6.20
-chardet==3.0.4
-coremltools==4.0
-cycler==0.10.0
-gast==0.3.3
-google-auth==1.21.1
-google-auth-oauthlib==0.4.1
-google-pasta==0.2.0
-grpcio==1.33.1
-h5py==3.1.0
-idna==2.10
-importlib-metadata==1.7.0
-Keras-Preprocessing==1.1.2
-kiwisolver==1.2.0
-Markdown==3.2.2
-matplotlib==3.3.1
-numpy==1.21.0
-oauthlib==3.1.0
-opencv-python==4.5.2.52
-opt-einsum==3.3.0
-Pillow==8.0.0
-protobuf==3.13.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pyparsing==2.4.7
-python-dateutil==2.8.1
-requests==2.24.0
-requests-oauthlib==1.3.0
-rsa==4.6
-scipy==1.5.4
-six==1.15.0
-tensorboard==2.8.0
-tensorboard-plugin-wit==1.7.0
-tensorflow==2.8.0
-tensorflow-estimator==2.8.0
-termcolor==1.1.0
-tfcoreml==1.0
-urllib3==1.25.10
-Werkzeug==1.0.1
-wrapt==1.12.1
-zipp==3.1.0
+aesara==2.5.3
+aiohttp==3.8.1
+AppKit==0.2.8
+autograd==1.3
+blinker==1.4
+boto3==1.21.30
+botocore==1.24.30
+brotli==1.0.9
+brotlicffi==1.0.9.2
+cached_property==1.5.2
+caffe2==0.8.1
+cairocffi==1.3.0
+Carbon==1.1.8
+click==8.1.1
+cloud_tpu_client==0.10
+ConfigParser==5.2.0
+cryptography==36.0.2
+Cython==0.29.28
+defcon==0.10.0
+defusedxml==0.7.1
+dill==0.3.4
+disco==1.40.4
+dl==0.1.0
+docutils==0.18.1
+freetype_py==2.2.0
+fs==2.4.15
+fsspec==2022.2.0
+genapi==0.0.8
+gmpy2==2.1.2
+google_api_python_client==2.42.0
+graphviz==0.19.1
+grpc_reflection==1.0.0
+grpc_tools==1.0.0
+h5==0.5.2
+HTMLParser==0.0.2
+hypothesis==6.40.0
+ipykernel==6.11.0
+ipython==8.2.0
+ipywidgets==7.7.0
+Jinja2==3.1.1
+jnius==1.1.0
+keras_applications==1.0.8
+keyring==23.5.0
+kubernetes==23.3.0
+lockfile==0.12.2
+lxml==4.8.0
+lz4==4.0.0
+matchpy==0.5.5
+memory_profiler==0.60.0
+mock==4.0.3
+mpi4py==3.1.3
+mtrand==0.1
+multiset==3.0.1
+munkres==1.1.4
+mypy==0.942
+nose==1.3.7
+numarray==1.5.1
+Numeric==24.2
+oauth2client==4.1.3
+objgraph==3.5.0
+olefile==0.46
+ordereddict==1.1
+pandas==1.4.1
+pickle5==0.0.12
+portpicker==1.5.0
+psutil==5.9.0
+pycosat==0.6.3
+pydot==1.4.2
+pydot_ng==2.0.0
+pydotplus==2.0.2
+pydy==0.6.0
+pyglet==1.5.23
+pymc3==3.11.5
+pyOpenSSL==22.0.0
+PyQt5==5.15.6
+PyQt6==6.2.3
+pysat==3.0.1
+PySide2==5.15.2.1
+PySide6==6.2.4
+pythran==0.11.0
+pytidylib==0.3.2
+pytz==2022.1
+pyu2f==0.1.5
+PyYAML==6.0
+Quartz==0.0.1.dev0
+railroad==0.5.0
+reportlab==3.6.9
+Res==0.1.7
+sage==0.0.0
+scikits.talkbox==0.2.5
+setuptools_scm==6.4.2
+shiboken2==5.15.2.1
+shiboken6==6.2.4
+simplejson==3.17.6
+sip==6.5.1
+Sphinx==4.5.0
+svm==0.1.0
+symengine==0.9.2
+tblib==1.7.0
+tensorboard_plugin_profile==2.5.0
+tensorflow_addons==0.16.1
+tensorflow_io==0.24.0
+tflite_runtime==2.7.0
+threadpoolctl==3.1.0
+toml==0.10.2
+torchvision==0.12.0
+tornado==6.1
+ufoLib2==0.13.1
+unicodedata2==14.0.0
+xattr==0.9.9
+xmlrpclib==1.0.1
+zopfli==0.2.1
